# MCP_Anime

./: .gitignore  README.md  hianime_mcp_server.py  pyproject.toml  requirements.txt
config_examples/: continue_config.json  cursor_mcp.json  generic_mcp_config.json
examples/: example_client.py
